platform/gitops/components/platform/ops/vertical-pod-autoscaler/patch-vpa-requests-deployment-vpa-recommender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-recommender
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: recommender
          resources:
            requests:
              cpu: "15m"
              memory: "128Mi"
            limits:
              memory: "192Mi"
