platform/gitops/components/platform/ops/vertical-pod-autoscaler/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vpa-webhook-config
webhooks:
  - name: vpa.k8s.io
    admissionReviewVersions:
      - v1
    sideEffects: None
    timeoutSeconds: 30
    failurePolicy: Ignore
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["autoscaling.k8s.io"]
        apiVersions: ["*"]
        resources: ["verticalpodautoscalers"]
    clientConfig:
      service:
        name: vpa-webhook
        namespace: kube-system
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lVU01nRmVYQzJoTTBPWTRxYklYNEZHWjVOMldrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0pVM1JsY0MxU2IyOTBNQjRYRFRJMU1USXhPREUxTkRNMU5Gb1hEVE0xTVRJeApOakUxTkRNMU5Gb3dGREVTTUJBR0ExVUVBd3dKVTNSbGNDMVNiMjkwTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBc0NMZ3EwMWlXTmR5NVFyTVdxTUtlcG8zVkl1SGJwQmRISUZwZGdvRm1IK0MKdlN4ZUdmaUNoMjlMT285L2lHblN0elJwSnhvaVdrSkk2LzBGZlpVSEd4Y1Z0TVMxVk1nZDRmWDJLdmlPbGp4YwpEZnc5RTJpYWVS [...]
